pkg/kgateway/translator/gateway/testutils/inputs/traffic-policy/label_based.yaml
# This test contains a route that has multiple TrafficPolicies targeting it.
#
# The expected output must contain the merged policies
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
  namespace: infra
  labels:
    gateway: example
spec:
  gatewayClassName: example-gateway-class
  listeners:
  - name: http
    protocol: HTTP
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
  namespace: infra
  labels:
    route: example
    global-policy: cors # will be applied only when Settings.GlobalPolicyNamespace=kgateway-system
spec:
  parentRefs:
  - name: example-gateway
  hostnames:
  - "example.com"
  rules:
  - backendRefs:
      - name: example-svc
        port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: example-svc
  namespace: infra
spec:
  selector:
    test: test
  ports:
  - protocol: TCP
    port: 80
    targetPort: test
---
apiVersion: v1
kind: Service
metadata:
  name: log-test
  namespace: infra
  labels:
    app: log-test
    service: log-test
spec:
  ports:
  - name: grpc
    port: 50051
    appProtocol: kubernetes.io/h2c
    targetPort: 50051
  selector:
    app: log-test
